working user image added

--- a/src/components/Post/Post.less
+++ b/src/components/Post/Post.less
@@ -1,6 +1,7 @@
 .thumbnail {
     padding:0px;
 }
+
 .panel {
 	position:relative;
 	>.panel-heading {
@@ -27,4 +28,7 @@
 			border-width:8px;
 		}
 	}
+}
+.row>.post-column {
+	float:left;
 }
